Remove CSS instruction that prevents the background image to show on mobile.

--- a/css/debs.css
+++ b/css/debs.css
@@ -38,7 +38,6 @@
         rgba(0, 0, 0, 0.5)
       ), url('/img/campus.jpg');
     background-attachment: fixed;
-    background-repeat: no-repeat;
     background-position: 50%;
     padding-bottom: 0;
     padding-top: 0;
